<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TFTCookerKSO90</string>

    <string name="hint_level">Level</string>
    <string name="hint_extraction">Extraction</string>
    <string name="hint_timer">Timer</string>
    <string name="hint_brightness">Brightness</string>

    <string name="title_settings">Settings</string>
    <string name="title_time">Time</string>
    <string name="title_date">Date</string>
    <string name="title_language">Language</string>
    <string name="title_brightness">Brightness</string>
    <string name="title_volume">Volume</string>
    <string name="title_reset">Reset</string>
    <string name="title_connect">Connect</string>
    <string name="title_stand_by">Stand By</string>
    <string name="title_filter">Filter</string>

    <string name="title_level">Level</string>
    <string name="title_auto_short">A</string>
    <string name="title_hood_connection">Hood connection</string>
    <string name="title_how_to_connect_hood">How to connect to hood</string>
    <string name="title_minutes">Minutes</string>
    <string name="title_restore_default_setting">Restore to default settings.</string>
    <string name="title_software_version">Software Version :&#160;&#160;</string>
    <string name="title_model">Model :&#160;&#160;</string>
    <string name="title_version_display">System Version :&#160;&#160;</string>
    <string name="title_bluetooth">Bluetooth Address :&#160;&#160;</string>

    <string name="title_h">H</string>
    <string name="title_boost_short">B</string>

    <string name="title_paused" >Paused</string>
    <string name="title_demo_mode">Demonstration Mode</string>
    <string name="title_debug_mode">Debug Mode</string>

    <string name="title_destination_software">Destination version: %1$s Total Size: %2$d bytes</string>

    <string name="msg_timer_complete">Timer complete</string>
    <string name="msg_time_set">Time set</string>
    <string name="msg_date_set">Date set</string>
    <string name="msg_language_set">Language set</string>
    <string name="msg_brightness_set">Brightness set</string>
    <string name="msg_default_restored">Default setting restored</string>
    <string name="msg_stand_by_set">Stand by set</string>
    <string name="msg_hood_connected">Connected to Hood</string>
    <string name="msg_volume_set">Volume set</string>
    <string name="msg_filter_set">Type of installation set</string>

    <string name="msg_cookware_not_detected">Cookware\nnot detected</string>

    <string name="msg_enable_hood_connection">See your manual on how to\nconnect your cooker hood</string>

    <string name="msg_aluminium_filter_warn">Aluminium filter cleaning\nis recommended</string>
    <string name="msg_carbon_filter_warn">Carbon filter change\nis recommended</string>

    <string name="msg_confirm_demo_mode">Please confirm if you want to enable demo mode</string>
    <string name="msg_demo_mode_activated">Demo mode software activated</string>
    <string name="msg_confirm_normal_mode">Please confirm if you want to disable demo mode</string>
    <string name="msg_normal_mode_activated">Normal operation mode software\nactivated for common use and cooking</string>

    <string name="msg_downloading_apk">Downloading the apk file &#8230;&#8230;&#8230;</string>
    <string name="msg_download_complete">Downloading process completed successfully</string>

    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_apr">April</string>
    <string name="month_may">May</string>
    <string name="month_jun">June</string>
    <string name="month_jul">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>

    <string name="week_sun">Sunday</string>
    <string name="week_mon">Monday</string>
    <string name="week_tue">Tuesday</string>
    <string name="week_wed">Wednesday</string>
    <string name="week_thu">Thursday</string>
    <string name="week_fri">Friday</string>
    <string name="week_sat">Saturday</string>

    <string name="day_1">1st</string>
    <string name="day_2">2nd</string>
    <string name="day_3">3rd</string>
    <string name="day_4">4th</string>
    <string name="day_5">5th</string>
    <string name="day_6">6th</string>
    <string name="day_7">7th</string>
    <string name="day_8">8th</string>
    <string name="day_9">9th</string>
    <string name="day_10">10th</string>
    <string name="day_11">11th</string>
    <string name="day_12">12th</string>
    <string name="day_13">13th</string>
    <string name="day_14">14th</string>
    <string name="day_15">15th</string>
    <string name="day_16">16th</string>
    <string name="day_17">17th</string>
    <string name="day_18">18th</string>
    <string name="day_19">19th</string>
    <string name="day_20">20th</string>
    <string name="day_21">21st</string>
    <string name="day_22">22nd</string>
    <string name="day_23">23rd</string>
    <string name="day_24">24th</string>
    <string name="day_25">25th</string>
    <string name="day_26">26th</string>
    <string name="day_27">27th</string>
    <string name="day_28">28th</string>
    <string name="day_29">29th</string>
    <string name="day_30">30th</string>
    <string name="day_31">31st</string>

    <string name="err_er03_title">Water or pot on the glass over the control</string>
    <string name="err_er03_content">Clean the user interface</string>

    <string name="err_e1_title">Temperature sensor of the ceramic glass plate is high(%1$s)</string>
    <string name="err_e1_content">Please restart after the induction hob cools down.</string>
    <string name="err_e1">E1</string>

    <string name="err_e2_title">Temperature sensor of the IGBT is high(%1$s)</string>
    <string name="err_e2_content">Please restart after the induction hob cools down.</string>
    <string name="err_e2">E2</string>

    <string name="err_e3_title">Abnormal supply voltage(too high)(%1$s)</string>
    <string name="err_e3_content">Please inspect whether power supply is normal;\n Power on after the power supply is normal.</string>
    <string name="err_e3">E3</string>

    <string name="err_e4_title">Abnormal supply voltage(too low)(%1$s)</string>
    <string name="err_e4_content">Please inspect whether power supply is normal;\n Power on after the power supply is normal.</string>
    <string name="err_e4">E4</string>

    <string name="err_e5_title">Temperature sensor failure\n(the cooking zone which indicator showing "E")(%1$s)</string>
    <string name="err_e5_content">Connection cable not correctly\n plugged or assemble defective.</string>
    <string name="err_e5">E5</string>

    <string name="err_f1_title">The connection between the display board\n and the mainboard is fail(%1$s)</string>
    <string name="err_f1_content">1.Connection cable not correctly plugged or defective;\n 2.Replace the Mainboard.</string>
    <string name="err_f1">F1</string>

    <string name="err_f3_title">Coil temperature sensor failure(%1$s)</string>
    <string name="err_f3_content">Replace the coil sensor.</string>
    <string name="err_f3">F3</string>

    <string name="err_f4_title">Mainboard temperature failure.(%1$s)</string>
    <string name="err_f4_content">Replace the mainboard.</string>
    <string name="err_f4">F4</string>

</resources>
